--- a/public/voter.html
+++ b/public/voter.html
@@ -32,14 +32,14 @@
     }
 
     .row {
-      flex: 1 0 auto;
+      flex: 1 1 49%;
       display: flex;
     }
 
     .cell {
       border: 1px solid black;
-      flex: 1 0 auto;
-      font-size: 4em;
+      flex: 1 1 49%;
+      font-size: 2em;
       display: flex;
       align-items: center;
       border-radius: 3px;
@@ -89,18 +89,18 @@
   <div class="container">
     <div class="row">
       <a href="#" onclick="vote('a')" class="cell red">
-        <span>A</span>
+        <span>Disagree<br />Unlikely</span>
       </a>
       <a href="#" onclick="vote('b')" class="cell yellow">
-        <span>B</span>
+        <span>Agree<br />Unlikely</span>
       </a>
     </div>
     <div class="row">
       <a href="#" onclick="vote('c')" class="cell green">
-        <span>C</span>
+        <span>Disagree<br />Likely</span>
       </a>
       <a href="#" onclick="vote('d')" class="cell blue">
-        <span>D</span>
+        <span>Agree<br />Likely</span>
       </a>
     </div>
   </div>
